--- a/Polinomios/nbproject/project.properties
+++ b/Polinomios/nbproject/project.properties
@@ -44,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=18
+javac.target=18
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Polinomios
-main.class=App
+main.class=polinomios.Polinomios
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
