--- a/Polinomios/nbproject/private/private.properties
+++ b/Polinomios/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\sala306\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=/Users/harri/Library/Application Support/NetBeans/13/build.properties
